--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy to S3
 on:
  
   push:
-    branches: [ master ]
+    branches: [ main ]
 permissions:
   id-token: write
   contents: read
